GStreamer: increase input buffer size

The input buffer size of 128bytes (not kb(!)) could lead to demux
failures in the qtdemux element. increasing the maximum buffer size to
2mb seems to improve the behavior drastically.

Fixes: QTBUG-124776
Pick-to: 6.5 6.7
Change-Id: I14e3d8b12c9963def5a4a77f2bf1a404e2d0f122
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>